apps/hello/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-stable
  namespace: hello
spec:
  selector:
    app: hello
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-canary
  namespace: hello
spec:
  selector:
    app: hello
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-preview
  namespace: hello
spec:
  selector:
    app: hello
  ports:
    - port: 80
      targetPort: 8080
