apps/hello/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello
  namespace: hello
spec:
  parentRefs:
    - name: public-gateway
      namespace: ingress-nginx
  hostnames: [ "hello.example.com" ]
  rules:
    - backendRefs:
        - name: hello-stable
          port: 80
